# Al-Falak-DPUA-tauri

./: .gitignore  FINAL_CHECKLIST.md  FRONTEND_BEAUTIFICATION_ANALYSIS.md  LICENSE  LICENSE_OLD  README.md  VERIFICATION_REPORT.md  index.html  package-lock.json  package.json  test-frontend.html  test-hijri-conversion.html  test-hijri-conversion.js  test-i18n-export.html  test-summary.txt  vite.config.js
scripts/: extract_locations.py
src/: app.js  main.js  styles.css
src-tauri/: Cargo.toml  lib.d  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: hilal_validation.rs  investigate_sun_vb6.rs  sun_debug.rs  sun_debug2.rs  sun_validation.rs  test_conjunction_debug.rs  test_day_of_week.rs  test_feb18_complete.rs  vb6_comparison.rs
src-tauri/icons/: icon.icns  logo-alfalak.icns
src-tauri/src/: lib.rs  map.rs  validation.rs
src-tauri/src/astronomy/: arcv.rs  coordinates.rs  ephemeris_utils.rs  hilal.rs  lunar_position.rs  mod.rs  moon.rs  moon_phases.rs  nutation.rs  parallax.rs  prayer.rs  sun.rs  sun_meeus.rs  sun_vb6.rs  topocentric.rs  visibility.rs
src-tauri/src/astronomy/conjunction/: calculations.rs  estimation.rs  mod.rs  refinement.rs  types.rs
src-tauri/src/calendar/: gregorian.rs  hijri.rs  javanese.rs  julian_day.rs  mod.rs
src-tauri/src/commands/: astronomical.rs  calendar_cmd.rs  hilal.rs  mod.rs  validation.rs
src-tauri/src/criteria/: additional.rs  ijtima_qobla_ghurub.rs  khgt.rs  lfnu.rs  mabims.rs  mod.rs  odeh.rs  turkey.rs  wujudul_hilal.rs
src-tauri/tests/: debug_moon_position.rs  verify_hijri_2026.rs
(+30 files in other folders)
